# pevs-dsa2025-zadanie2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/: utils.hpp
src/: CMakeLists.txt  main.cpp
tests/: test_run.sh
